--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/png" href="https://img.icons8.com/pulsar-gradient/48/about-me.png">
 
     <link rel="stylesheet" href="/static/css/main.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -82,6 +84,11 @@
         </div>
         {% endif %}
     </div>
+
+    <footer style="font-family: 'Roboto', sans-serif; margin-top: 40px; padding: 15px; text-align: center; font-size: 13px; color: #666;">
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> abilash-dev </p>
+        <p><a href="https://abilash.link" target="_blank" style="color: #2196F3; text-decoration: none;">Abilash.Link</a> | <a href="https://github.com/abilash-dev/AdvancedContactFormPy" target="_blank" style="color: #2196F3; text-decoration: none;">Github Project</a></p>
+    </footer>
 
     <script src="/static/js/index.js"></script>
 
